# numix

./: Cargo.toml
src/: lib.rs
src/arithmetic/: binomial.rs
src/common/: functions.rs
src/integrate/: integrator.rs  quad.rs
src/interpolate/: b_spline.rs  cubic_bezier.rs  cubic_spline.rs  error_utils.rs  interpolator.rs  linear_spline.rs  nurbs.rs  parametric_curve.rs  polynomial.rs
src/optimize/: root_finding.rs
src/special/: polynomials.rs
tests/: b_spline_tests.rs  bisection_tests.rs  brent_tests.rs  cubic_bezier_tests.rs  cubic_spline_tests.rs  general_tests.rs  integrator_tests.rs  linear_spline_tests.rs  newton_tests.rs  nurbs_tests.rs  quad_tests.rs  ridders_tests.rs  secant_tests.rs  special_polynomial_tests.rs
