[package]
name = "scientific-numerical-toolkit"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "snt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
# ndarray-linalg= "0.16.0"
# ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
# ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
plotters = "0.3"